Migrated to java 8