@@ -1,6 +1,7 @@
 // Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.java.decompiler;
 
+import org.jetbrains.java.decompiler.main.decompiler.ConsoleDecompiler;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -10,7 +11,9 @@ import java.io.InputStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Map;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import static org.jetbrains.java.decompiler.DecompilerTestFixture.assertFilesEqual;
@@ -21,7 +24,7 @@ public class BulkDecompilationTest {
   @Before
   public void setUp() throws IOException {
     fixture = new DecompilerTestFixture();
-    fixture.setUp(Map.of());
+    fixture.setUp(Collections.emptyMap());
   }
 
   @After
@@ -32,10 +35,10 @@ public class BulkDecompilationTest {
 
   @Test
   public void testDirectory() {
-    var classes = fixture.getTempDir().resolve("classes");
+    Path classes = fixture.getTempDir().resolve("classes");
     unpack(fixture.getTestDataDir().resolve("bulk.jar"), classes);
 
-    var decompiler = fixture.getDecompiler();
+    ConsoleDecompiler decompiler = fixture.getDecompiler();
     decompiler.addSource(classes.toFile());
     decompiler.decompileContext();
 
@@ -58,25 +61,25 @@ public class BulkDecompilationTest {
   }
 
   private void doTestJar(String name) {
-    var decompiler = fixture.getDecompiler();
-    var jarName = name + ".jar";
+    ConsoleDecompiler decompiler = fixture.getDecompiler();
+    String jarName = name + ".jar";
     decompiler.addSource(fixture.getTestDataDir().resolve(jarName).toFile());
     decompiler.decompileContext();
 
-    var unpacked = fixture.getTempDir().resolve("unpacked");
+    Path unpacked = fixture.getTempDir().resolve("unpacked");
     unpack(fixture.getTargetDir().resolve(jarName), unpacked);
 
     assertFilesEqual(fixture.getTestDataDir().resolve(name), unpacked);
   }
 
   private static void unpack(Path archive, Path targetDir) {
-    try (var zip = new ZipFile(archive.toFile())) {
-      var entries = zip.entries();
+    try (ZipFile zip = new ZipFile(archive.toFile())) {
+      Enumeration<? extends ZipEntry> entries = zip.entries();
       while (entries.hasMoreElements()) {
-        var entry = entries.nextElement();
+        ZipEntry entry = entries.nextElement();
         if (!entry.isDirectory()) {
           if (entry.getName().contains("..")) throw new IllegalArgumentException("Invalid entry: " + entry.getName());
-          var file = targetDir.resolve(entry.getName());
+          Path file = targetDir.resolve(entry.getName());
           Files.createDirectories(file.getParent());
           try (InputStream in = zip.getInputStream(entry)) {
             Files.copy(in, file);
